# mixed-methods-market-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  SPEC.MD  pyproject.toml  requirements.txt
data/raw/: headlines.csv  prices.csv  returns.csv
notebooks/: 01_data_preparation.html  01_data_preparation.ipynb  02_quantitative_analysis.html  02_quantitative_analysis.ipynb  03_qualitative_analysis.html  03_qualitative_analysis.ipynb  04_report_figures.html  04_report_figures.ipynb
reports/: final_report.md  report_template.md
scripts/: fetch_news_alpaca.py  fetch_prices_alpaca.py  generate_synthetic.py
src/: features.py  plot.py  utils.py
tests/: test_utils.py
