[project]
name = "mixed-methods-market-analysis"
version = "0.0.1"
description = "Research portfolio project: mixed quantitative + qualitative market analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data/", "reports/figures/"]
lint.select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
]
lint.ignore = []
